Завершена модернизация чёрной панели

--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
                             <a href="javascript:void(0)" title="Заказать чистку сплит в Ростове">Чистка</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Демонтаж</a>
+                            <a href="javascript:void(0)" title="Сколько стоит снять сплит в Ростве, в ВИМТЕХ">Демонтаж</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Закладка трубок</a>
+                            <a href="javascript:void(0)" title="Как правильно сделать закладки трубок, On-Line калькулятор стоимости монтаж в 2 этапа">Закладка трубок</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Вызов специалиста</a>
+                            <a href="javascript:void(0)" title="Вызов специалиста ВИМТЕХ">Вызов специалиста</a>
                         </li>
                     </ul>
                 </div>
                 <div class="black_panel_actions">
                     <div class="black_panel_content">
-                        <h3 class="black_panel_actions_zag">Сплит системы по акции</h3>
+                        <a href="javascript:void(0)" class="black_panel_actions_zag" title="Сплит системы Ростов акции">Сплит системы по акции</a>
                         <h4 class="black_panel_actions_pod_zag">По площади помещения</h4>
                         <ul>
-                            <li><a href="javascript:void(0)">СПЛИТ 7</a>
+                            <li><a href="javascript:void(0)" title="Сплит 7 - стоимость, сравнение, отзывы">СПЛИТ 7</a>
                                 <p>для помещений до 22 кв.м.</p>
                             </li>
-                            <li><a href="javascript:void(0)">СПЛИТ 9</a>
+                            <li><a href="javascript:void(0)" title="Сплит 9 - стоимость, сравнение, отзывы">СПЛИТ 9</a>
                                 <p>для помещений 22 - 28 кв.м.</p>
                             </li>
-                            <li><a href="javascript:void(0)">СПЛИТ 12</a>
+                            <li><a href="javascript:void(0)" title="Сплит 12 - стоимость, сравнение, отзывы">СПЛИТ 12</a>
                                 <p>для помещений 28 - 40 кв.м.</p>
                             </li>
                         </ul>
@@ -163,19 +163,19 @@
                     <div class="black_panel_content">
                         <h3 class="black_panel_kategories_zag">Категории сплит систем</h3>
                         <ul>
-                            <li><a href="javascript:void(0)">Дешёвые сплит системы</a>
+                            <li><a href="javascript:void(0)" title="Дешевые сплиты Ростов">Дешёвые сплит системы</a>
                             </li>
-                            <li><a href="javascript:void(0)">С бесплатной установкой</a>
+                            <li><a href="javascript:void(0)" title="Бесплатная установка кондиционера">С бесплатной установкой</a>
                             </li>
-                            <li><a href="javascript:void(0)">Сплит системы:</a>
+                            <li><a href="javascript:void(0)" title="Кондиционеры (сплит) - лучшие цены в Ростове">Сплит системы:</a>
                                 <p> “Лучшая цена”</p>
                             </li>
-                            <li><a href="javascript:void(0)">Недорогие инверторные</a>
+                            <li><a href="javascript:void(0)" title="Недорогие инверторные системы в Ростове">Недорогие инверторные</a>
                             </li>
-                            <li><a href="javascript:void(0)">Сплит системы</a>
+                            <li><a href="javascript:void(0)" title="Ионизированный воздух сплит & кондиционер черный и других цветов">Сплит системы</a>
                                 <p>дизайнерские и с “наворотами”</p>
                             </li>
-                            <li><a href="javascript:void(0)">Not China -</a><br>
+                            <li><a href="javascript:void(0)" title="родажа сплит (кондиционеров) в Ростове, сделанных в Япония, Малайзия, Турция, Таиланд">Not China -</a><br>
                                 <p>“Сделано не в Китае”</p>
                             </li>
                         </ul>
