сделаны все правки, начата ловля багов

--- a/index.html
+++ b/index.html
@@ -2613,6 +2613,7 @@
             <!--модальное окно логотип конец -->
             <!--модальное окно по брендам начало -->
             <div class="brend_block podmenu" id="brend">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="brend_block_box_line">
                     <div class="brend_block_box">
                         <h3 class="brend_block_box_zag">Хорошие, качественные производители</h3>
@@ -2725,6 +2726,7 @@
             <!--модальное окно по брендам конец -->
             <!--модальное окно по площади начало -->
             <div class="area_block podmenu" id="area">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="area_block_power_line">
                     <a href="#" class="area_block_power_line_block ">
                         <div class="area_block_power_line_block_namder" title="Сплит 7 - для маленьких помещений">
@@ -2918,6 +2920,7 @@
             <!--модальное окно по площади конец -->
             <!--модальное окно по цене начало -->
             <div class="price_block podmenu" id="price">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="price_block_link">
                     <a href="javascript:void(0)" class="price_block_link_retail price_block_link_block"
                        title="Стоимость в Ростове кондиционеров (сплит систем) различных брендов и типов">
@@ -2970,6 +2973,7 @@
             <!--модальное окно по цене конец -->
             <!--модальное окно мультисплит начало -->
             <div class="multi_block podmenu" id="multi">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="multi_block_box multi_block_roof">
                     <a href="javascript:void(0)" class="multi_block_box_zag"
                        title="Техника с внутренним блоком кассетного типа (встраивается в подвесной потолок)">кассетные</a>
@@ -3033,6 +3037,7 @@
             <!--модальное окно мультисплит конец -->
             <!--модальное окно установка сервис начало -->
             <div class="services_block podmenu" id="service">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="services_block_box services_block_link_box">
                     <div class="services_block_link_box_block services_block_link_box_price">
                         <div class="services_block_link_box_block_img_line"><img src="img/price_list.png" alt=""
@@ -3101,6 +3106,7 @@
             <!--модальное окно установка сервис окончание -->
             <!--модальное окно выбор начало -->
             <div class="question_block podmenu" id="question">
+                <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="question_block_link">
                     <a href="javascript:void(0)">Как правильно выбрать сплит</a>
 
