исправлены баги в шапке и section, добавлены кноаки закрыть в выпадающеие меню

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             </div>
         </div>
         <!--/Боковая/чёрная панель-->
+        <div class="modal_wrap">
         <div class="foto_block schem_big_block modal" id="foto">
             <a href="javascript:void(0)" class="close_foto"><i></i></a>
             <img src="img/schema/Vimtex.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
@@ -2592,6 +2593,7 @@
             </div>
         </div>
 
+    </div>
     </div>
     <header class="header">
 
