--- a/index.html
+++ b/index.html
@@ -3315,7 +3315,7 @@
                 <div class="header_kontakt_line">
                     <a href="mailto:zakaz@2211687.ru Менеджеру_ВИМТЕХ?subject=рассмотреть срочно(шифр ОВ-особой важности)"
                        class="meil"><p>Пишите:</p><i
-                            class="icon-mail_header"></i> zakaz@2211687.ru</a>
+                            class="icon-mail_header"></i> <span>zakaz@2211687.ru</span></a>
                     <div class="ring_wrap">
                         <a href="javascript:void(0)" class="ring">
                             <p>Звоните<span>:</span></p>
