Исправлены ошибки в шапке

--- a/index.html
+++ b/index.html
@@ -1721,7 +1721,7 @@
         <!--/Карта -->
         <!--Схема проезда -->
         <div class="schem_big_block modal" id="schem_big">
-            <a href="javascript:void(0)" class=" scheme_close"><i></i></a>
+            <a href="javascript:void(0)" class=" scheme_close close"><i></i></a>
             <div class="schem_big_block__schem_block">
                 <div class="schem_big_block__schem_block_nav" id="may_nav_schem">
                     <a href="#schem1">Схема1</a>
