Адаптированы шапка и минишапка

--- a/index.html
+++ b/index.html
@@ -1632,7 +1632,7 @@
             </div>
             <div class="thenk_block_logo">
                 <a href="index.html">
-                    <img src="img/temp_sprite/logo.png" alt="ВИМТЕХ" title="ВИМТЕХ">
+                    <img src="img/logo_thenk.png" alt="ВИМТЕХ" title="ВИМТЕХ">
                     <p>Прохлада в доме не должна стоить дорого! </p>
                 </a>
             </div>
@@ -3219,7 +3219,7 @@
 
                             <i>В</i>ИМТЕХ
                         </a>
-                        <p><b>пр</b>. <i>Ш</i>олохова, <b>д</b>.101</p>
+                        <p><b>пр.</b> <i>Ш</i>олохова, <b>д.</b>101</p>
                     </div>
                     <p class="header_nav_logo_line_sity">Сплит системы в Ростове-на-Дону</p>
                     <a href="javascript:void(0)" class="header_nav_logo_line_schem" id="schem_header">(<span>схема проезда</span>)</a>
