Внесены все правки свёрстаны дополнительные модальные окна и  выпадающий список в подвале Не свёрсткан поппап полный прайс

--- a/index.html
+++ b/index.html
@@ -15,8 +15,60 @@
 <body>
 <div class="wraper">
 
-
     <div class="modal_fon">
+        <!--Гаранттия-->
+        <div class="garant_block modal">
+            <a href="javascript:void(0)" class="close"><i></i></a>
+            <div class="garant_block_header">
+                <i class="icon"></i>
+                <h3>Гарантийный талон “<span><i>В</i>имтех</span>” на оказанные услуги и приобретенную технику</h3>
+            </div>
+            <div class="garant_block_section">
+                <div class="garant_block_section_img">
+                    <img src="img/garant.jpg" alt="Гарантийный талон">
+                </div>
+                <div class="garant_block_section_text">
+                    <h2>Гарантии на сплит-системы</h2>
+                    <h3>Гарантия на приобретённый в <span>В</span>ИМТЕХ кондиционер</h3>
+                    <p>
+                        <span>А</span>вторизованный Торгово-Сервисный Центр ВИМТЕХ при продаже климатической техники
+                        предоставляет
+                        гарантию на кондиционеры и сплит системы не менее срока гарантийной службы, заявленной
+                        производителем. Мы не применяем нечестные сделки, распространённые в сетевых супермаркетах
+                        электроники, когда за гарантийный срок, предоставляемый производителем кондиционеров,
+                        магазин-продавец, получают дополнительную оплату (типа "дай 1500 рублей и получите 2 года
+                        дополнительной гарантии" и т.д.).
+                    </p>
+                    <h3>Гарантия на монтаж кондиционера</h3>
+                    <p>
+                        <span>Г</span>арантийный срок на произведенный нашей организацией монтаж климатической техники -
+                        12 месяцев.
+                        В случае выхода из строя климатического оборудования в результате ошибок, допущенных при монтаже
+                        (несоблюдение строительных ГОСТов и СНИПов, отклонение от требований производителя
+                        климатического оборудования и т.д.) нашей организацией - мы за свой счет, без всяких судов
+                        компенсируем потери. Также за свой счёт устраним неполадки, возникшие по нашей вине.
+                    </p>
+                    <h3>Гарантия на произведённый ремонт климатической техники</h3>
+                    <p>
+                        <span>М</span>ы не берем на себя никаких обязательств по сроку службы отремонтированной климатической
+                        техники. Мы можем взять на себя обязательства, что все ремонтные работы сделаны качественно и
+                        квалифицированно, на эти работы мы даём 12 месяцев работоспособности и готовы за свой счет
+                        устранить неполадки в случае если ремонтные работы выполнены некачественно. Но как показывает
+                        опыт и практика - 80 процентов обращений, летом, связаны с утечкой хладагента в дешёвой
+                        аппаратуре. Мы сделаем хорошо, качественно сделаем , по всем правилам - найдём и устраним
+                        утечку, смонтируем обратно сплит-систему и заправим фреоном. Но мы не можем дать никаких
+                        обязательств, что этот "хлам" не даст трещину в любом другом месте. Также не сможем дать
+                        гарантий на перепаянный компрессор кондиционера - это будет ложь и враньё, ни одна организация,
+                        заботящаяся о своём имени, не скажет что после вырезания компрессора, они смогли очистить блоки
+                        от следов разрушения и подгоревшего масла, установка фильтров также не даёт гарантии что новый
+                        компрессор будет работать долго. Замена компрессора, это всегда во многом удача (так же как ни
+                        один хирург не сможет дать 100 % гарантии что операция пойдёт успешно, увы, очень много факторов
+                        врачу неподвластных)
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!--/Гаранттия-->
         <!--//////////////////////////////////////////БОКОВАЯ ЧЁРНАЯ ПАНЕЛЬ////////////////////////////////////////////////////////////// -->
         <div class="black_panel">
             <div class="black_panel_wrap">
@@ -5516,7 +5568,7 @@
                     <i class="mini_footer_act_serch_lupa"></i>
 
                 </div>
-                <a href="javascript:void(0)" class="ring">
+                <a href="tel:+78632211687" class="ring">
                     <p>Звоните<span>:</span></p>
                     <span>+7 (863)</span> 221-16-87<i></i>
 
@@ -5591,11 +5643,109 @@
                     <p>Vertex</p>
                     <span>(Вертекс)</span>
                 </a>
-                <a href="#" class="mini_footer_brends_all">
+                <a href="#" class="mini_footer_brends_all" id="open_all_brend">
                     <p>показать все бренды</p>
 
                 </a>
-
+            </div>
+            <div class="all_brend">
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Acson"
+                   class="link">Acson</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя AEG"
+                   class="link">AEG </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Aero"
+                   class="link">Aero</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Aeronic"
+                   class="link">Aeronic</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Airwell"
+                   class="link">Airwell</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Akwilon"
+                   class="link">Akvilon </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Aux"
+                   class="link">Aux</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Ballu"
+                   class="link">Ballu </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Carrier"
+                   class="link">Carrier</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Chigo"
+                   class="link">Chigo</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Daikin"
+                   class="link">Daikin</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Dantex"
+                   class="link">Dantex </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Electrolux"
+                   class="link">Electrolux</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Fujitsu"
+                   class="link">Fujitsu</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Galanz"
+                   class="link">Galanz</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя General"
+                   class="link">General</a>
+                <a href="javascript:void(0)"
+                   title="Ассортимент, цены кондиционеров (сплит) производителя General Climate" class="link">General
+                    Climate</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя GoldStar"
+                   class="link">GoldStar</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Gree"
+                   class="link">Gree</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Haier"
+                   class="link">Haier </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Hitachi"
+                   class="link">Hitachi</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Hyndai"
+                   class="link">Hyundai </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя IGC"
+                   class="link">IGC</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Kentatsu"
+                   class="link">Kentatsu</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Lessar"
+                   class="link">Lessar</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Lg"
+                   class="link">Lg</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя MDV"
+                   class="link">MDV</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Midea"
+                   class="link">Midea</a>
+                <a href="javascript:void(0)"
+                   title="Ассортимент, цены кондиционеров (сплит) производителя Mitsubishi Electric" class="link">Mitsubishi
+                    Electric</a>
+                <a href="javascript:void(0)"
+                   title="Ассортимент, цены кондиционеров (сплит) производителя Mitsubishi Heavy" class="link">Mitsubishi
+                    Heavy</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Neoclima"
+                   class="link">Neoclima</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Panasonic"
+                   class="link">Panasonic</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Quattroclima"
+                   class="link">Quattroclima</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Rix"
+                   class="link">Rix </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Roda"
+                   class="link">Roda</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Samsung"
+                   class="link">Samsung</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Scoole"
+                   class="link">Scoole</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Soing"
+                   class="link">Soling </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Sistemair"
+                   class="link">Systemair</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Timberk"
+                   class="link">Timberk </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Toshiba"
+                   class="link">Toshiba </a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Tosot"
+                   class="link">Tosot</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Venterra"
+                   class="link">Venterra</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Vertex"
+                   class="link">Vertex</a>
+                <a href="javascript:void(0)" title="Ассортимент, цены кондиционеров (сплит) производителя Zanussi"
+                   class="link">Zanussi</a>
+                <a href="javascript:void(0)" title="" class="link"></a>
+                <div class="close_block">
+                    <a href="javascript:void(0)" id="close_all_brend" title="Свернуть">скрыть все бренды</a>
+                </div>
             </div>
             <a href="#" class="mini_footer_brends_price">
                 Полный прайс лист на работы и материалы<span><b>В</b>ИМТЕХ</span>
@@ -5630,12 +5780,12 @@
                 </div>
             </div>
             <div class="mini_footer_actions">
-                <h3 class="mini_footer_actions_zag">товары по АКЦИИ</h3>
-                <a href="#">Цены</a>
-                <a href="#">Настенный сплит</a>
-                <a href="#" class="answer">Ответы на вопросы о сплит системах</a>
+                <a href="javascript:void(0)" class="mini_footer_actions_zag">товары по АКЦИИ</a>
+                <a href="#" class="link">Цены</a>
+                <a href="#" class="link">Настенный сплит</a>
+                <a href="#" class="answer link">Ответы на вопросы о сплит системах</a>
                 <div class="mini_footer_actions_prise">
-                    <a href="#" class="payment">
+                    <a href="#" class="payment link">
                         <p>Доставка,оплата, гарантия</p>
                     </a>
                     <a href="#" class="bascet">
@@ -5808,7 +5958,7 @@
                         <div class="footer_help_link_line_right_bottom">
                             <a href="javascript:void(0)"><b>Доставка и оплата</b></a>
                             <a href="javascript:void(0)"><b>Политика обмена и возврата</b></a>
-                            <a href="javascript:void(0)"><b>Гарантия на сплит системы и
+                            <a href="javascript:void(0)" id="garant_button"><b>Гарантия на сплит системы и
                                 гарантия на монтаж</b></a>
 
                         </div>
