Собран спрайт шапки( изображения сохранены)

--- a/index.html
+++ b/index.html
@@ -203,10 +203,11 @@
                             <!--Вызов специалиста -->
                             <a href="javascript:void(0)" class="spec_block">
                                 <div class="spec_block_img">
-                                    <img src="img/spec.png" alt="" title="">
+                                   <i cl
+                                      i class="icon"></i>
                                 </div>
                                 <div class="spec_block_text">
-                                    <h3>Хочу вызвать специалиста</h3>
+                                    <h4>Хочу вызвать специалиста</h4>
                                     <p>
                                         Для составления точной сметы на монаж, с учётом возможных дополнительных работ,
                                         а так же для консультации по вопросу расположения блоков кондционера,(возможна
@@ -2911,7 +2912,7 @@
                 <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="brend_block_box_line">
                     <div class="brend_block_box">
-                        <h3 class="brend_block_box_zag">Хорошие, качественные производители</h3>
+                        <h4 class="brend_block_box_zag">Хорошие, качественные производители</h4>
                         <div class="brend_block_box_rating">
                             <p>Рейтинг брендов</p>
                             <div class="brend_block_box_rating_star_line">
@@ -2944,7 +2945,7 @@
                         </div>
                     </div>
                     <div class="brend_block_box">
-                        <h3 class="brend_block_box_zag">Недорогие, но надежные бренды</h3>
+                        <h4 class="brend_block_box_zag">Недорогие, но надежные бренды</h4>
                         <div class="brend_block_box_rating">
                             <p>Рейтинг брендов</p>
                             <div class="brend_block_box_rating_star_line">
@@ -2972,7 +2973,7 @@
                         </div>
                     </div>
                     <div class="brend_block_box">
-                        <h3 class="brend_block_box_zag">Дорогие, престижные бренды</h3>
+                        <h4 class="brend_block_box_zag">Дорогие, престижные бренды</h4>
                         <div class="brend_block_box_rating">
                             <p>Рейтинг брендов</p>
                             <div class="brend_block_box_rating_star_line">
@@ -3222,11 +3223,11 @@
                 <div class="price_block_link">
                     <a href="javascript:void(0)" class="price_block_link_retail price_block_link_block"
                        title="Стоимость в Ростове кондиционеров (сплит систем) различных брендов и типов">
-                        <img src="img/price.png" alt="" title="">
+                        <i class="icon"></i>
                         <p>Цены на сплит</p>
                     </a>
                     <a href="javascript:void(0)" class="price_block_link_gross price_block_link_block">
-                        <img src="img/opt.png" alt="" title="Продажа сплит систем оптом">
+                        <i class="icon"></i>
                         <p>Оптовые цены<br>
                             сплит систем</p>
                     </a>
@@ -3338,8 +3339,7 @@
                 <a href="javascript:void(0)" class="close close_podmenu"><i></i></a>
                 <div class="services_block_box services_block_link_box">
                     <div class="services_block_link_box_block services_block_link_box_price">
-                        <div class="services_block_link_box_block_img_line"><img src="img/price_list.png" alt=""
-                                                                                 title=""></div>
+                        <div class="services_block_link_box_block_img_line"><i class="icon"></i> </div>
                         <a href="javascript:void(0)"
                            title="Стоимость различных работ, необходимых при монтаже климатической техники">
                             <span><b>Полный прайс лист</b></span>
@@ -3351,8 +3351,7 @@
 
 
                     <div class="services_block_link_box_block services_block_link_box_spec">
-                        <div class="services_block_link_box_block_img_line"><img src="img/spec.png" alt="" title="">
-                        </div>
+                        <div class="services_block_link_box_block_img_line"><i class="icon"></i></div>
                         <a href="javascript:void(0)" title="Вызвать замерщика сплит - консультация, составление сметы ">
                             <b>Вызов специалиста</b> 400 руб.
                         </a>
