Начаты правки ховеров

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 <div class="spec_block_text">
                                     <h4>Хочу вызвать специалиста</h4>
                                     <p>
-                                        Для составления точной сметы на монаж, с учётом возможных дополнительных работ,
+                                        Для составления точной сметы на монтаж, с учётом возможных дополнительных работ,
                                         а так же для консультации по вопросу расположения блоков кондционера,(возможна
                                         онлайн оплата)- <span>400</span> <b>руб</b>*
                                     </p>
