Поправлены ховеры на всей странице.

--- a/index.html
+++ b/index.html
@@ -1836,7 +1836,7 @@
                     </a>
                 </div>
                 <div class="thenk_block_thenk_box">
-                    <h3>Спасибо!</h3>
+                    <h4>Спасибо!</h4>
                     <p>Мы Вам перезвоним по телефону: <span id="tel_thenks">+7 (918) 526 75 00</span><br>
                         в ближайшее время</p>
                 </div>
@@ -5950,7 +5950,7 @@
                         <a href="javascript:void(0)">Интернет-магазин сплит систем в
                             Ростове - самые популярные товары</a>
                         <div class="footer_help_link_line_left_bottom">
-                            <a href="javascript:void(0)" class="calcul_footer"><b>Калькулятор рассчета мощности</b></a>
+                            <a href="javascript:void(0)" class="calcul_footer button"><b>Калькулятор рассчета мощности</b></a>
                             <a href="javascript:void(0)"><b>Сплит системы по акции</b></a>
                             <a href="javascript:void(0)"><b>Ответы на распространенные
                                 вопросы</b> <span>(все, что Вы хотели знать,
