Внесены все правки на 20число, начата самостоятельная проверка

--- a/index.html
+++ b/index.html
@@ -2617,10 +2617,8 @@
                                 <h4 class="power_calculator_coontent_form_base_zag">Основные параметры</h4>
                             </div>
                             <div class="power_calculator_coontent_form_more">
-                                <h3 class="power_calculator_coontent_form_more_zag">Дополнит
-                                    <wbr>
-                                    ельные параметры
-                                </h3>
+                                <h4 class="power_calculator_coontent_form_more_zag">Дополнит<wbr>ельные параметры
+                                </h4>
                             </div>
                         </div>
                         <form action="javascript:void(0)" method="post">
@@ -2716,9 +2714,7 @@
                                                 </a>
                                                 </li>
                                                 <li><a href="javascript:void(0)"><i>4</i>е человека</a></li>
-                                                <li><a href="javascript:void(0)"><i>5</i>человек
-
-                                                </a>
+                                                <li><a href="javascript:void(0)"><i>5</i>человек</a>
                                                 </li>
                                                 <li><a href="javascript:void(0)"><i>6</i>человек
                                                     <span>(систематически в помещении проходят совещания или банкеты)</span>
@@ -2800,7 +2796,7 @@
                                 <div class="power_calculator_coontent_form_more_line">
                                     <div class="checkbox_line calcul_check">
 
-                                        <a href="javascript:void(0)" class="check activ" id="B"><span></span></a>
+                                        <a href="javascript:void(0)" class="check" id="B"><span></span></a>
                                         <p>Большая длина хладотрассы<i class="question_button" data-id="#big">?</i></p>
                                     </div>
                                     <p class="text">
@@ -2852,7 +2848,7 @@
                     </div>
                     <div class="power_calculator_coontent_rezult" id="rez_block">
                         <div class="power_calculator_coontent_rezult_zag_block">
-                            <h3>Результаты расчетов:</h3>
+                            <h4>Результаты расчетов:</h4>
                             <a href="index.html" class="logo">
 
                                 <i>В</i>ИМТЕХ
@@ -5130,7 +5126,7 @@
                                                 <div class="info"><p class="country">Япония</p></div>
                                             </div>
                                             <div class="product__all_info_info_line_row">
-                                                <div class="name"><p>Артикул</p></div>
+                                                <div class="name"><p class="art">Артикул</p></div>
                                                 <div class="info"><p class="art">03720611-02</p></div>
                                             </div>
                                         </div>
@@ -5264,7 +5260,7 @@
                                                 <div class="info"><p class="country">Япония</p></div>
                                             </div>
                                             <div class="product__all_info_info_line_row">
-                                                <div class="name"><p>Артикул</p></div>
+                                                <div class="name"><p class="art">Артикул</p></div>
                                                 <div class="info"><p class="art">03720611-02</p></div>
                                             </div>
                                         </div>
@@ -5398,7 +5394,7 @@
                                                 <div class="info"><p class="country">Япония</p></div>
                                             </div>
                                             <div class="product__all_info_info_line_row">
-                                                <div class="name"><p>Артикул</p></div>
+                                                <div class="name"><p class="art">Артикул</p></div>
                                                 <div class="info"><p class="art">03720611-02</p></div>
                                             </div>
                                         </div>
@@ -5533,7 +5529,7 @@
                                                 <div class="info"><p class="country">Япония</p></div>
                                             </div>
                                             <div class="product__all_info_info_line_row">
-                                                <div class="name"><p>Артикул</p></div>
+                                                <div class="name"><p class="art">Артикул</p></div>
                                                 <div class="info"><p class="art">03720611-02</p></div>
                                             </div>
                                         </div>
